    * ADD: support for /mnt/user/{bin,lib} dirs for custom binaries and libs
    * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
    * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
    * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
    * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
    * CHANGE: shorten USB storage check time to minimal with info how much time has it took
    * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation
    * WARN: from this release there's already default password set for telnet, SSH and web server - "openlgtv"

0.4.0:

    * FIX: netcast_config_enable_all option updated that now the output config.xml contains only items which have their netcast icons
    * ADD: static list of kernel modules loading support from /lib/modules, /home/modules, /mnt/user/modules
    * ADD: kernel modules included in /lib/modules: cifs.ko, evdev.ko, fuse.ko, hid.ko, input-core.ko, usbhid.ko
    * ADD: keyboard (only partial yet) and mouse support in built-in web browser - WebUI switchable option, not enabled by default
    * ADD: install.sh script makes now firmware backup if the OpenLGTV BCM installation is run for the first time
    * ADD: editable 25 bookmarks feature to Internet Browser WebUI option (work by nicola_12345)
    * UPDATE: haserl updated to 0.9.29
    * CHANGE: sstripped binaries for reduce image size (only busybox and uClibc libs left, yet)
    * CHANGE: BusyBox is now dynamic linked instead of static (more free space for other things)
    * CHANGE: MTD partitions mounting has been separated from rcS to rc.mount script
    * REMOVE: removed strace and ltrace binaries
    * REMOVE: libz.so.1.2.3 - libz.so* libs are now linked to /usr/local/lib/libz.so*